fix: changed noContent status code to OK status code for handlers that return success messages
