# docs/swagger.json
@@ -406,7 +406,7 @@
                     }
                 ],
                 "responses": {
-                    "204": {
+                    "200": {
                         "description": "User activated",
                         "schema": {
                             "type": "string"
@@ -583,7 +583,7 @@
                     }
                 ],
                 "responses": {
-                    "204": {
+                    "200": {
                         "description": "User followed",
                         "schema": {
                             "type": "string"
@@ -628,7 +628,7 @@
                     }
                 ],
                 "responses": {
-                    "204": {
+                    "200": {
                         "description": "User unfollowed",
                         "schema": {
                             "type": "string"
